Bug persists on smallest screen sizes, fix attempt

--- a/public/styles.scss
+++ b/public/styles.scss
@@ -279,6 +279,7 @@ body {
         margin: 15px auto;
         border: 1px solid $turq;
         text-align: center;
+        display: block;
     }
     p.spacer {
         margin-bottom: 10px;
